test/tests/compiler/16_characters_and_strings/invalid_parse/extra_credit/string_literal_goto.plx
# You can't use a string literal as a label in a goto statement
pub fn main(none) i32 {
    jump "foo"
    return 0
}
